--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "dependencies": {
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "better-auth": "^1.3.33",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
-    "mongoose": "8.19.2"
+    "mongoose": "8.19.2",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
